--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
   <title>topo</title>
   <link rel="manifest" href="manifest.json">
 </head>
